--- a/aliases/vtm_undeploy_service.yaml
+++ b/aliases/vtm_undeploy_service.yaml
@@ -3,4 +3,4 @@ name: "vtm_undeploy_service"
 action_ref: "vadc.undeploy_chain"
 description: "Remove a Web Service"
 formats:
-  - "vtm_undeploy {{service}} on {{vtm}}"
+  - "vtm undeploy {{service}} on {{vtm}}"
