--- a/aliases/vtm_drain_nodes.yaml
+++ b/aliases/vtm_drain_nodes.yaml
@@ -3,5 +3,5 @@ name: "vtm_drain_nodes"
 action_ref: "vadc.vtm_drain_nodes"
 description: "configure node draining for a pool"
 formats:
-  - "vtm_drain {{nodes}} on {{vtm}} in {{name}} {{drain=true}}"
-  - "vtm_undrain {{nodes}} on {{vtm}} in {{name}} {{drain=false}}"
+  - "vtm drain {{nodes}} on {{vtm}} in {{name}} {{drain=true}}"
+  - "vtm undrain {{nodes}} on {{vtm}} in {{name}} {{drain=false}}"
