--- a/actions/vtm_get_pool_nodes.yaml
+++ b/actions/vtm_get_pool_nodes.yaml
@@ -8,7 +8,7 @@ parameters:
     description: "The vTM instance to configure"
     type: string
     required: true
-  name:
+  pool:
     description: "The name of the pool"
     type: string
     required: true
