add port and protocol params

--- a/actions/vtm_add_vserver.yaml
+++ b/actions/vtm_add_vserver.yaml
@@ -20,3 +20,13 @@ parameters:
     description: "The name of the TIP Group to use"
     required: true
     type: string
+  port:
+    description: "The port for the virtual server to listen on"
+    required: false
+    type: integer
+    default: 80
+  protocol:
+    description: "The protocol for the virtual server"
+    required: false
+    type: string
+    default: "http"
