Add monitor and persistence params

--- a/actions/vtm_add_pool.yaml
+++ b/actions/vtm_add_pool.yaml
@@ -20,3 +20,14 @@ parameters:
     description: "Load Balancing algorithm for the pool"
     default: 'least_connections'
     type: string
+    required: false
+  persistence:
+    description: "Persistence class for the pool"
+    default: ""
+    type: string
+    required: false
+  monitors:
+    description: "Health Monitor for the pool"
+    default: ["Ping"]
+    type: array
+    required: false
