support extra json config

--- a/actions/vtm_add_vserver.yaml
+++ b/actions/vtm_add_vserver.yaml
@@ -30,3 +30,7 @@ parameters:
     required: false
     type: string
     default: "http"
+  extra:
+    description: "Additional JSON/YAML properties to merge during creation"
+    type: string
+    required: false
