--- a/rules/bsd_bandwidth_notify.yaml
+++ b/rules/bsd_bandwidth_notify.yaml
@@ -1,7 +1,7 @@
 ---
     name: "bsd_bandwidth_notify"
     pack: "vadc"
-    description: "Realtime Bandwidth Alerts for BSD"
+    description: "Notify ChatOps of a Bandwidth Update"
     enabled: false
 
     trigger:
