--- a/actions/vtm_get_backup.yaml
+++ b/actions/vtm_get_backup.yaml
@@ -12,12 +12,7 @@ parameters:
     description: "The name of the Backup"
     type: string
     required: true
-  b64:
-    description: "Base64 Encode the tarfile?"
-    type: boolean
-    required: false
-    default: true
   outdir:
     description: "Output directory name"
     type: string
-    required: false
+    required: true
